--- a/src/app/_components/Price/index.module.scss
+++ b/src/app/_components/Price/index.module.scss
@@ -2,8 +2,8 @@
 
 .actions {
   display: flex;
-  justify-content: space-between;
   align-items: center;
+  justify-content: space-between;
   flex-wrap: wrap;
   gap: calc(var(--base) / 2);
 
@@ -26,8 +26,8 @@
   }
 
   @include small-break {
-    grid-template-columns: 1fr;
-    font-size: 16px;
+    grid-template-colums: 1fr;
+    font-size: 16p;
   }
 }
 
